--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-EMAIL_HOST=smtp.gmail.com
+OPENAI_API_KEY=your-openai-api-key
+MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
 EMAIL_PASS=jlry rtkz ojds bhsf
+OPENAI_API_KEY=your-openai-api-key
