--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
 EMAIL_PASS=jlry rtkz ojds bhsf
-OPENAI_API_KEY=your-openai-api-key
+DATABASE_PATH=users.db
