--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
 EMAIL_PASS=jlry rtkz ojds bhsf
 DATABASE_PATH=users.db
+DEFAULT_ADMIN_USERNAME=admin
+DEFAULT_ADMIN_PASSWORD=admin@1971
+DEFAULT_ADMIN_EMAIL=info@bongcorpuz.com
