--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DATABASE_PATH=users.db
 DEFAULT_ADMIN_USERNAME=admin
 DEFAULT_ADMIN_PASSWORD=admin@1971
 DEFAULT_ADMIN_EMAIL=info@bongcorpuz.com
+TAX_KEYWORDS=tax,vat,bir,rdo,tin,withholding,income tax,1701,1702,2550,0605,0619,form,return,compliance,Philippine taxation,CREATE law,TRAIN law,ease of paying taxes
+
