--- a/.huggingface/huggingface.yml
+++ b/.huggingface/huggingface.yml
@@ -1,35 +1,10 @@
-# .github/workflows/python-app.yml
+sdk: gradio
+python_version: 3.10
 
-name: Run TINA Tests
+env:
+  - OPENAI_API_KEY: ${secrets.OPENAI_API_KEY}
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
-
-      - name: Run tests
-        run: pytest
-
-      - name: Validate .env
-        run: |
-          echo "OPENAI_API_KEY=$OPENAI_API_KEY" > .env
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+run:
+  - pip install -r requirements.txt
+  - pip install pytest pytest-cov
+  - pytest --cov=tina_app test_tina.py
