--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
+# Required
 OPENAI_API_KEY=your-openai-api-key
+TINA_ADMIN_PASS=admin@1971
+
+# Optional: for future email notifications
 MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
-EMAIL_PASS=jlry rtkz ojds bhsf
-DATABASE_PATH=users.db
-DEFAULT_ADMIN_USERNAME=admin
-DEFAULT_ADMIN_PASSWORD=admin@1971
-DEFAULT_ADMIN_EMAIL=info@bongcorpuz.com
-TAX_KEYWORDS=tax,vat,bir,rdo,tin,withholding,income tax,1701,1702,2550,0605,0619,form,return,compliance,Philippine taxation,CREATE law,TRAIN law,ease of paying taxes
+EMAIL_PASS=jlryrtkzojdsbhsf
 
