--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 OPENAI_API_KEY=your-openai-api-key
 TINA_ADMIN_PASS=admin@1971
 
-# Optional: for future email notifications
+# Optional (for future features)
 MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
-EMAIL_PASS=jlryrtkzojdsbhsf
+EMAIL_PASS=your-app-password
 
