--- a/.huggingface/huggingface.yml
+++ b/.huggingface/huggingface.yml
@@ -1,10 +1,11 @@
 sdk: gradio
+app_file: app.py
 python_version: 3.10
 
 env:
   - OPENAI_API_KEY: ${secrets.OPENAI_API_KEY}
 
+# Optional testing phase
 run:
   - pip install -r requirements.txt
-  - pip install pytest pytest-cov
-  - pytest --cov=tina_app test_tina.py
+  - pytest --maxfail=1 --disable-warnings
