--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,26 @@
 openai==1.0.0
 gradio==5.34.2
 python-dotenv==1.0.1
-bcrypt==4.1.3
+bcrypt==4.1.2
 pytesseract==0.3.10
-pillow==10.3.0
+Pillow==10.2.0
 PyMuPDF==1.23.20
-pdfplumber==0.10.3
-sqlite-utils==3.36
+pdfplumber==0.10.4
+sqlite-utils==3.35
 
-# Semantic search
+# Semantic Search + FAISS + Embeddings
 faiss-cpu==1.7.4
 sentence-transformers==2.6.1
-torch==2.2.2
-transformers==4.40.1
+scikit-learn==1.3.2
+transformers==4.37.2
+torch==2.1.2
+numpy==1.26.4  # compatible with faiss 1.7.4
 
-# Office and file type handling
+# Office file support
 python-docx==1.1.0
-python-pptx==0.6.23
-xlrd==2.0.1
 docx2txt==0.8
 
 # Testing & deployment
-pytest==8.2.2
+pytest==8.2.0
 huggingface_hub==0.28.1
-uvicorn==0.29.0  # Optional: Only for FastAPI deployment
-
-# Utility
-tqdm==4.66.4
+uvicorn==0.29.0  # Optional, for FastAPI fallback
