--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,1 @@
-# requirements.txt
-
-# Core dependencies
-openai==1.3.8
-gradio==5.34.2
-python-dotenv==1.0.1
-bcrypt==4.1.2
-pytesseract==0.3.10
-Pillow==10.2.0
-PyMuPDF==1.23.20
-pdfplumber==0.10.4
-sqlite-utils==3.35
-
-# Semantic Search + FAISS + Embeddings
-faiss-cpu==1.7.4
-sentence-transformers==2.6.1
-scikit-learn==1.3.2
-transformers==4.37.2
-torch==2.1.2
-numpy==1.26.4
-
-# Office file support
-python-docx==1.1.0
-docx2txt==0.8
-textract==1.6.5
-
-# Testing & deployment
-pytest==8.2.0
-huggingface_hub==0.28.1
-uvicorn==0.29.0
+Patch /requirements.txt now to fix texttract typo
