--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ bcrypt==4.1.2
 pytesseract==0.3.10
 Pillow==10.2.0
 PyMuPDF==1.23.20
-pdfplumber==0.10.4
+pdfplumber==0.7.6  # Downgraded for textract compatibility
 sqlite-utils==3.35
 
 # Semantic Search + FAISS + Embeddings
