--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 
 # Core dependencies 
 openai==1.0.0
+httpx==0.27.0  # Required by openai>=1.0.0
 gradio==5.34.2
 python-dotenv==1.0.1
 bcrypt==4.1.2
@@ -18,12 +19,12 @@ sentence-transformers==2.6.1
 scikit-learn==1.3.2
 transformers==4.37.2
 torch==2.1.2
-numpy==1.26.4  # compatible with faiss 1.7.4
+numpy==1.26.4  # Compatible with faiss 1.7.4
 
 # Office file support
 python-docx==1.1.0
 docx2txt==0.8
-textract==1.6.3  # compatible with Python 3.10
+textract==1.6.3  # Compatible with Python 3.10
 
 # Testing & deployment
 pytest==8.2.0
