--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-# requirements.txt
-
 # Core dependencies 
 openai==1.0.0
-httpx==0.27.0  # Required by openai>=1.0.0
+anyio==3.7.1
 gradio==5.34.2
 python-dotenv==1.0.1
 bcrypt==4.1.2
@@ -19,14 +17,14 @@ sentence-transformers==2.6.1
 scikit-learn==1.3.2
 transformers==4.37.2
 torch==2.1.2
-numpy==1.26.4  # Compatible with faiss 1.7.4
+numpy==1.26.4  # compatible with faiss 1.7.4
 
 # Office file support
 python-docx==1.1.0
 docx2txt==0.8
-textract==1.6.3  # Compatible with Python 3.10
+textract==1.6.3  # compatible with Python 3.10
 
 # Testing & deployment
 pytest==8.2.0
 huggingface_hub==0.28.1
-uvicorn==0.29.0  # Optional, for FastAPI fallback
+uvicorn==0.29.0
