--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# ------------------ requirements.txt ------------------
 # Core dependencies 
 openai==1.0.0
 anyio==3.7.1
@@ -26,5 +27,6 @@ textract==1.6.3  # compatible with Python 3.10
 
 # Testing & deployment
 pytest==8.2.0
+pytest-cov==5.0.0
 huggingface_hub==0.28.1
 uvicorn==0.29.0
