--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # Required
 OPENAI_API_KEY=your-openai-api-key
 TINA_ADMIN_PASS=admin@1971
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-supabase-service-role-key
+
 
 # Optional (for future features)
 MAIL_HOST=smtp.gmail.com
