--- a/.env
+++ b/.env
@@ -3,13 +3,16 @@ TINA_ADMIN_PASS=admin@1971
 
 SUPABASE_URL=https://pyselemsuwedotwiztdx.supabase.co
 
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+# Required
 SUPABASE_KEY=anon-public-key-if-needed
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
+# Optional
 MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
 EMAIL_PASS=your-app-password
+
 
 
 
