--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 MAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@bongcorpuz.com
-EMAIL_PASS=your-app-password
+EMAIL_PASS=jlry rtkz ojds bhsf
 
 
 
